Fix alignment of images within choice block labels

--- a/stylesheets/_component.choice.scss
+++ b/stylesheets/_component.choice.scss
@@ -24,6 +24,10 @@
         user-select: none; // stop nasty blue text selection when clicking
         width: 100%; // mobile-first width
 
+        img {
+            vertical-align: middle;
+        }
+
         &:last-child {
             margin: 0;
         }
